# SOLRUSH

./: .gitignore  API_DOCS.md  Anchor.toml  CHECKLIST.md  Cargo.toml  FIXES_APPLIED.md  LICENSE  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  README.md  STATUS.md  SUMMARY.md  TEST_SUITE_SUMMARY.md  package-lock.json  package.json
programs/solrush-admin/: Cargo.toml
programs/solrush-admin/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/solrush-admin/src/instructions/: emergency_withdraw.rs  initialize_admin.rs  mod.rs  pause_trading.rs  resume_trading.rs  transfer_admin.rs  update_fee_rate.rs
programs/solrush-liquidity-pool/: Cargo.toml
programs/solrush-liquidity-pool/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/solrush-liquidity-pool/src/instructions/: add_liquidity.rs  get_pool_info.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs
programs/solrush-perpetual/: Cargo.toml
programs/solrush-perpetual/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/solrush-perpetual/src/instructions/: add_margin.rs  calculate_pnl.rs  close_position.rs  liquidate_position.rs  mod.rs  open_position.rs  update_funding_rate.rs
programs/solrush-rewards/: Cargo.toml
programs/solrush-rewards/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/solrush-rewards/src/instructions/: calculate_pending_rewards.rs  claim_rewards.rs  initialize_rewards.rs  initialize_user_rewards.rs  mod.rs  update_reward_rate.rs  update_user_rewards.rs
programs/solrush-swap/: Cargo.toml  README.md  client-example.ts
programs/solrush-swap/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/solrush-swap/src/instructions/: calculate_swap_output.rs  cancel_dca_order.rs  cancel_limit_order.rs  create_dca_order.rs  execute_dca_order.rs  execute_limit_order.rs  execute_market_order.rs  execute_swap.rs  get_swap_fee_info.rs  initialize_order_book.rs  initialize_pool.rs  mod.rs  place_limit_order.rs
programs/solrush-token/: Cargo.toml
programs/solrush-token/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/solrush-token/src/instructions/: get_circulating_supply.rs  get_total_supply.rs  initialize_rush_token.rs  mint_rush_tokens.rs  mod.rs  transfer_mint_authority.rs
scripts/: deploy.sh  initialize.sh
src/: errors.rs  events.rs  lib.rs  state.rs
src/instructions/: add_liquidity.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs  update_fees.rs
tests/: README.md  liquidity-pool.ts
tests/integration/: pool_operations.test.ts
tests/unit/: amm_calculations.test.ts
tests/utils/: test-helpers.ts
