[workspace]
resolver = "2"
members = [
    "programs/solrush-liquidity-pool",
    "programs/solrush-swap",
    "programs/solrush-token",
    "programs/solrush-rewards",
    "programs/solrush-perpetual",
    "programs/solrush-admin",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
