[package]
name = "dex_amm"
version = "0.1.0"
description = "Solana DEX AMM Program - Automated Market Maker with Liquidity Pools"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dex_amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = "4.0.0"
