[package]
name = "solrush-admin"
version = "0.1.0"
description = "SolRush DEX Administration Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solrush_admin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
solrush-liquidity-pool = { path = "../solrush-liquidity-pool", features = ["cpi"] }
