[package]
name = "solrush-liquidity-pool"
version = "0.1.0"
description = "SolRush DEX Liquidity Pool Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solrush_liquidity_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = "4.0.0"
