[package]
name = "solrush-perpetual"
version = "0.1.0"
description = "SolRush DEX Perpetual Trading Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solrush_perpetual"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
